i am getting a 404 pages when i deploy to railway

--- a/railway.toml
+++ b/railway.toml
@@ -4,6 +4,8 @@
 # Build settings
 [build]
   builder = "nixpacks"
+  buildCommand = "npm run build"
+  startCommand = "npm start"
 
 # Environment
 [env]
