lets still work on the send email aspect of the admin dashboard

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
-CLOUDINARY_CLOUD_NAME=ddotpcz0x
-CLOUDINARY_API_KEY=398528531429484
-CLOUDINARY_API_SECRET=gIE3NvdjORdo9jIHXa74gnFbuXc
+
+# Gmail credentials for sending emails
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASS=your-16-character-app-password
+
+# Cloudinary (Required for image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
+
+# Firebase credentials
+NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+# ... etc
