I see this error with the app, reported by NextJS, please fix it. The er

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,9 @@ GOOGLE_GENAI_API_KEY=your_google_ai_api_key
 # Email Service Configuration (Gmail App Password)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_gmail_email@gmail.com
+SMTP_USER=TicketFlow
 SMTP_PASS=your_gmail_app_password
-FROM_EMAIL=your_gmail_email@gmail.com
+FROM_EMAIL=issakasaddick14@gmail.com
 
 # Production URL
 NEXT_PUBLIC_APP_URL=https://ticket-flow.up.railway.app
