--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,10 @@
+# TicketFlow Environment Configuration
+# Copy this file to .env and fill in your actual values
 
-# Firebase Configuration (Required)
+# =======================================
+# FIREBASE CONFIGURATION (REQUIRED)
+# =======================================
+# Get these from your Firebase project settings
 NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyCioz6RGKlmYc3aIYpEWTCTYJFwtf0kDaA"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="ticketflow-5bf3g.firebaseapp.com"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="ticketflow-5bf3g"
@@ -8,22 +13,30 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="618525371848"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:618525371848:web:ea66cbc638516eb579a4fd"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="YOUR_MEASUREMENT_ID"
 
-# Gmail credentials for sending emails
+# =======================================
+# EMAIL CONFIGURATION
+# =======================================
+# Gmail SMTP for sending emails
 GMAIL_USER=your-email@gmail.com
 GMAIL_APP_PASS=your-16-character-app-password
 
-# Cloudinary (Required for image uploads)
+# =======================================
+# CLOUDINARY (IMAGE UPLOADS)
+# =======================================
 CLOUDINARY_CLOUD_NAME=your_cloud_name_here
 CLOUDINARY_API_KEY=your_api_key_here
 CLOUDINARY_API_SECRET=your_api_secret_here
 
-# Payment Gateway Configuration
-# Stripe
+# =======================================
+# PAYMENT GATEWAYS
+# =======================================
+
+# Stripe (Global)
 STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# PayPal
+# PayPal (Global)
 PAYPAL_CLIENT_ID=your_paypal_client_id
 PAYPAL_CLIENT_SECRET=your_paypal_client_secret
 PAYPAL_WEBHOOK_ID=your_paypal_webhook_id
@@ -36,6 +49,16 @@ RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 FLUTTERWAVE_PUBLIC_KEY=your_flutterwave_public_key
 FLUTTERWAVE_SECRET_KEY=your_flutterwave_secret_key
 
-# App Configuration
+# =======================================
+# APPLICATION CONFIGURATION
+# =======================================
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_ADMIN_EMAIL=admin@ticketflow.com
+
+# Launch Configuration
+NEXT_PUBLIC_LAUNCH_MODE=countdown
+NEXT_PUBLIC_LAUNCH_DATE=2024-01-26T12:00:00Z
+
+# Commission Settings
+ADMIN_COMMISSION_RATE=0.05
+PLATFORM_FEE_RATE=0.01
