i have configured my email settings in the .env(dont change anything the

--- a/.env
+++ b/.env
@@ -9,13 +9,13 @@ NEXT_PUBLIC_FIREBASE_APP_ID="1:618525371848:web:ea66cbc638516eb579a4fd"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="YOUR_MEASUREMENT_ID"
 
 # Gmail credentials for sending emails
-GMAIL_USER=your-email@gmail.com
-GMAIL_APP_PASS=your-16-character-app-password
+GMAIL_USER=issakasaddick14@gmail.com
+GMAIL_APP_PASS="prvj welf nxjm kzvh"
 
 # Cloudinary (Required for image uploads)
-CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_API_KEY=your_api_key_here
-CLOUDINARY_API_SECRET=your_api_secret_here
+CLOUDINARY_CLOUD_NAME=ddotpcz0x
+CLOUDINARY_API_KEY=398528531429484
+CLOUDINARY_API_SECRET=gIE3NvdjORdo9jIHXa74gnFbuXc
 
 # Payment Gateway Configuration
 # Stripe
@@ -38,4 +38,4 @@ FLUTTERWAVE_SECRET_KEY=your_flutterwave_secret_key
 
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_ADMIN_EMAIL=admin@ticketflow.com
+NEXT_PUBLIC_ADMIN_EMAIL=issakasaddick14@gmail.com
