--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "15.3.3",
     "nodemailer": "^6.4.17",
     "patch-package": "^8.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
