--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -49,6 +50,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.3",
     "genkit": "^1.13.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "nodemailer": "^6.4.17",
