--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002",
+    "dev": "next dev -p 9002 -r dotenv/config",
     "dev:turbo": "next dev --turbopack -p 9002",
     "dev:https": "next dev -p 9002 --experimental-https",
     "dev:legacy": "next dev -p 9002 --no-swc",
