fix: update nodemailer to version 6.10.1 and add @types/nodemailer dependency

--- a/.env
+++ b/.env
@@ -12,10 +12,18 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="YOUR_MEASUREMENT_ID"
 GMAIL_USER=issakasaddick14@gmail.com
 GMAIL_APP_PASS="prvj welf nxjm kzvh"
 
+# SMTP Configuration (for email service)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=issakasaddick14@gmail.com
+SMTP_PASS="prvj welf nxjm kzvh"
+FROM_EMAIL=TicketFlow
+
 # Cloudinary (Required for image uploads)
 CLOUDINARY_CLOUD_NAME=ddotpcz0x
 CLOUDINARY_API_KEY=398528531429484
 CLOUDINARY_API_SECRET=gIE3NvdjORdo9jIHXa74gnFbuXc
+
 
 # Payment Gateway Configuration
 # Stripe
