i have a tf-logo in the /public, lets use it for the metadata of the pag

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NEXT_PUBLIC_FIREBASE_APP_ID="1:618525371848:web:ea66cbc638516eb579a4fd"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="YOUR_MEASUREMENT_ID"
 
 # Gmail credentials for sending emails
-GMAIL_USER=issakasaddick14@gmail.com
+GMAIL_USER=TicketFlow
 GMAIL_APP_PASS="prvj welf nxjm kzvh"
 
 # SMTP Configuration (for email service)
@@ -17,7 +17,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=issakasaddick14@gmail.com
 SMTP_PASS="prvj welf nxjm kzvh"
-FROM_EMAIL=TicketFlow
+FROM_EMAIL=issakasaddick14@gmail.com
 
 # Cloudinary (Required for image uploads)
 CLOUDINARY_CLOUD_NAME=ddotpcz0x
