--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.3",
     "genkit": "^1.13.0",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -61,7 +62,6 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
