--- a/.env
+++ b/.env
@@ -47,4 +47,4 @@ FLUTTERWAVE_SECRET_KEY=your_flutterwave_secret_key
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_ADMIN_EMAIL=issakasaddick14@gmail.com
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyA-xsKY25f83QLzsFLkasET4N-QkgubGXY
