--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "genkit": "^1.13.0",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "nodemailer": "^6.4.17",
@@ -62,6 +63,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -70,6 +72,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
