--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 
 # Firebase Configuration (Required)
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyCioz6RGKlmYc3aIYpEWTCTYJFwtf0kDaA"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="ticketflow-5bf3g.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="ticketflow-5bf3g"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="ticketflow-5bf3g.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="618525371848"
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCioz6RGKlmYc3aIYpEWTCTYJFwtf0kDaA
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=ticketflow-5bf3g.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=ticketflow-5bf3g
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=ticketflow-5bf3g.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=618525371848
 NEXT_PUBLIC_FIREBASE_APP_ID="1:618525371848:web:ea66cbc638516eb579a4fd"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="YOUR_MEASUREMENT_ID"
 
@@ -48,3 +48,9 @@ FLUTTERWAVE_SECRET_KEY=your_flutterwave_secret_key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_ADMIN_EMAIL=issakasaddick14@gmail.com
 GOOGLE_API_KEY=AIzaSyA-xsKY25f83QLzsFLkasET4N-QkgubGXY
+GA_PROPERTY_ID=
+GA_CLIENT_EMAIL=
+GA_PRIVATE_KEY=
+NEXT_AIAssistant_FIREBASE_APP_ID=1:618525371848:web:ea66cbc638516eb579a4fd
+NEXT_PUBLIC_LAUNCH_DATE=2025-07-18T12:00:00Z
+NEXT_PUBLIC_LAUNCH_MODE=live
