--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
     "@genkit-ai/next": "^1.13.0",
+    "@google-analytics/data": "^4.7.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -55,6 +56,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.4.17",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
