--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@genkit-ai/next": "^1.13.0",
     "@google-analytics/data": "^4.7.0",
     "@hookform/resolvers": "^4.1.3",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -41,6 +42,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -49,6 +52,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
+    "flutterwave-node-v3": "^1.1.10",
     "framer-motion": "^12.23.3",
     "genkit": "^1.13.0",
     "html5-qrcode": "^2.3.8",
@@ -60,6 +64,7 @@
     "nodemailer": "^6.4.17",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -68,6 +73,7 @@
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
@@ -76,6 +82,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
