--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.4.17",
+    "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
     "razorpay": "^2.9.4",
@@ -82,6 +83,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
