--- a/.env
+++ b/.env
@@ -54,3 +54,4 @@ GA_PRIVATE_KEY=
 NEXT_AIAssistant_FIREBASE_APP_ID=1:618525371848:web:ea66cbc638516eb579a4fd
 NEXT_PUBLIC_LAUNCH_DATE=2025-07-18T12:00:00Z
 NEXT_PUBLIC_LAUNCH_MODE=live
+GEMINI_API_KEY=
