i need all my emails to have the same orange color as thw website

--- a/.env
+++ b/.env
@@ -45,7 +45,7 @@ FLUTTERWAVE_PUBLIC_KEY=your_flutterwave_public_key
 FLUTTERWAVE_SECRET_KEY=your_flutterwave_secret_key
 
 # App Configuration
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://ticket-flow.up.railway.app
 NEXT_PUBLIC_ADMIN_EMAIL=issakasaddick14@gmail.com
 GOOGLE_API_KEY=AIzaSyA-xsKY25f83QLzsFLkasET4N-QkgubGXY
 GA_PROPERTY_ID=
