--- a/.env
+++ b/.env
@@ -55,3 +55,4 @@ NEXT_AIAssistant_FIREBASE_APP_ID=1:618525371848:web:ea66cbc638516eb579a4fd
 NEXT_PUBLIC_LAUNCH_DATE=2025-07-18T20:00:00Z
 NEXT_PUBLIC_LAUNCH_MODE=live
 GEMINI_API_KEY=AIzaSyA-xsKY25f83QLzsFLkasET4N-QkgubGXY
+CRON_SECRET=your-super-secret-cron-key-change-me
